force-app/main/default/objects/ReferredFromAgencies__c/ReferredFromAgencies__c.object-meta.xml
<CustomObject>
    <label>Referred From Agencies</label>
    <nameField>
        <displayFormat>RFA-{000}</displayFormat>
        <label>Referred From Agencies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referred From Agencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>