force-app/main/default/objects/ReferredFromAgencies__c/fields/ReferredFromDate__c.field-meta.xml
<CustomField>
    <fullName>ReferredFromDate__c</fullName>
    <label>Referred From Date</label>
    <type>Date</type>
</CustomField>