force-app/main/default/objects/ReferredFromAgencies__c/fields/SEBCase__c.field-meta.xml
<CustomField>
    <fullName>SEBCase__c</fullName>
    <label>SEB Case</label>
    <referenceTo>SEBCase__c</referenceTo>
    <relationshipLabel>Referred From Agencies</relationshipLabel>
    <relationshipName>Referred_From_Agencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>